# impactu_oaiserver

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  copilot_profile.md  docker-compose.yml  manage.sh  pyproject.toml  requirements.txt
backend/src/: __init__.py  app.py  cerif.py  mongo_client.py  oai.py
docker/openaire-validator/: .env.example  Dockerfile  README.md  docker-compose.yml  run_and_tail.sh  validate.sh
docker/openaire-validator/harness/: parallel_validate.sh  proxy_single_set.py
docs/: CERIF_MAPPING.md  CERIF_VALIDATION_SUMMARY.md
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/components/: Footer.js  NavBar.js  XMLViewer.js
frontend/pages/: _app.js  _document.js  index.js  oai-view.js
frontend/pages/records/: [id].js  index.js
frontend/styles/: globals.css  xmlviewer.css
scripts/: check_cerif_output.py  run_and_test.sh  start_server.sh
src/: app.py  cerif.py  mongo_client.py  oai.py
